--- a/src/app/components/transport/transport.component.scss
+++ b/src/app/components/transport/transport.component.scss
@@ -16,3 +16,15 @@
   min-height: 60px;
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
+
+.cdk-drop-list-receiving {
+  border: dotted 5px red;
+}
+
+.card {
+  color: white;
+  border: solid 1px $yellow-TUC;
+  background-color: transparent;
+  padding: 10px;
+  margin: 5px 0;
+}
